--- a/po/uk.po
+++ b/po/uk.po
@@ -6,17 +6,20 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: homebank\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2017-01-22 18:52+0100\n"
 "PO-Revision-Date: 2013-10-27 19:02+0000\n"
 "Last-Translator: Dmytro Kyrychuk <Unknown>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
-"Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-01-22 16:08+0000\n"
-"X-Generator: Launchpad (build 18302)\n"
+"X-Launchpad-Export-Date: 2017-02-14 20:37+0000\n"
+"X-Generator: Launchpad (build 18326)\n"
+
+#: ../src/dsp_account.c:2251
+msgid "Open the list filter"
+msgstr "Відкрити фільтр переліку"
 
 #: ../data/homebank.desktop.in.in.h:1 ../src/dsp_mainwindow.c:879
 msgid "HomeBank"
@@ -37,8 +40,8 @@ msgstr ""
 
 #: ../data/homebank.appdata.xml.in.h:1
 msgid ""
-"HomeBank is a free software (as in \"free speech\" and also as in \"free beer"
-"\") that will assist you to manage your personal accounting."
+"HomeBank is a free software (as in \"free speech\" and also as in \"free "
+"beer\") that will assist you to manage your personal accounting."
 msgstr ""
 
 #: ../data/homebank.appdata.xml.in.h:2
@@ -247,10 +250,6 @@ msgstr "Закрити цей рахунок"
 #: ../src/dsp_account.c:2251
 msgid "_Filter..."
 msgstr "_Фільтр..."
-
-#: ../src/dsp_account.c:2251
-msgid "Open the list filter"
-msgstr "Відкрити фільтр переліку"
 
 #: ../src/dsp_account.c:2252
 msgid "Convert to Euro..."
@@ -739,7 +738,8 @@ msgstr "Звітувати про проблему..."
 
 #: ../src/dsp_mainwindow.c:226
 msgid "Connect to the LaunchPad website to help fix problems"
-msgstr "Відкрити веб-сайт Launchpad, щоби допомогти у вирішенні цієї проблеми"
+msgstr ""
+"Відкрити веб-сайт Launchpad, щоби допомогти у вирішенні цієї проблеми"
 
 #: ../src/dsp_mainwindow.c:228
 msgid "_About"
@@ -830,9 +830,9 @@ msgstr ""
 
 #. future usage
 #: ../src/dsp_mainwindow.c:1168
-#, fuzzy, c-format
+#, c-format
 msgid "Top %d spending"
-msgstr "_Рейтинг витрат"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:1335 ../src/rep_stats.c:1025 ../src/rep_stats.c:1045
 #: ../src/ui-budget.c:131 ../src/ui-category.c:393 ../src/ui-category.c:594
@@ -976,14 +976,12 @@ msgid "Collapse all"
 msgstr ""
 
 #: ../src/dsp_mainwindow.c:2869
-#, fuzzy
 msgid "Show all"
-msgstr "Відобразити детально"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2874
-#, fuzzy
 msgid "By type"
-msgstr "(без типу)"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2875
 msgid "By institition"
@@ -1153,7 +1151,7 @@ msgstr ""
 #. label = gtk_label_new(_("General"));
 #. page = ui_flt_manage_page_general(&data);
 #. gtk_notebook_append_page (GTK_NOTEBOOK (notebook), page, label);
-#.
+#. 
 #: ../src/list_operation.c:1044 ../src/list_operation.c:1362
 #: ../src/rep_balance.c:1240 ../src/rep_vehicle.c:218 ../src/rep_vehicle.c:1097
 #: ../src/ui-filter.c:1302 ../src/ui-pref.c:1540
@@ -1568,7 +1566,7 @@ msgstr "_Акумулюючий"
 msgid "_View by:"
 msgstr "_Перегляд по"
 
-#.
+#. 
 #. LST_CAR_DATE,
 #. LST_CAR_WORDING,
 #. LST_CAR_METER,
@@ -1577,10 +1575,10 @@ msgstr "_Перегляд по"
 #. LST_CAR_AMOUNT,
 #. LST_CAR_DIST,
 #. LST_CAR_100KM
-#.
-#.
+#. 
+#. 
 #. column: Wording
-#.
+#. 
 #. column = gtk_tree_view_column_new();
 #. gtk_tree_view_column_set_title(column, _("Wording"));
 #. gtk_tree_view_append_column (GTK_TREE_VIEW(view), column);
@@ -1588,7 +1586,7 @@ msgstr "_Перегляд по"
 #. gtk_tree_view_column_pack_start(column, renderer, TRUE);
 #. gtk_tree_view_column_add_attribute(column, renderer, "text", LST_CAR_WORDING);
 #. //gtk_tree_view_column_set_cell_data_func(column, renderer, repvehicle_text_cell_data_function, NULL, NULL);
-#.
+#. 
 #. column: Meter
 #: ../src/rep_vehicle.c:219 ../src/rep_vehicle.c:1130
 msgid "Meter"
@@ -3331,12 +3329,3 @@ msgstr "Включити"
 #: ../src/ui-widgets.c:935
 msgid "Exclude"
 msgstr "Виключити"
-
-#~ msgid "Edit Filter"
-#~ msgstr "Редагувати Фільтр"
-
-#~ msgid "Edit the filter"
-#~ msgstr "Редагувати фільтр"
-
-#~ msgid "Configure _Preferences"
-#~ msgstr "Особисті налаштування"
