--- a/po/br.po
+++ b/po/br.po
@@ -6,17 +6,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: homebank\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2017-01-22 18:52+0100\n"
 "PO-Revision-Date: 2016-08-21 08:42+0000\n"
 "Last-Translator: Alan <Unknown>\n"
 "Language-Team: Breton <alan.monfort@free.fr>\n"
-"Language: br\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-01-22 16:09+0000\n"
-"X-Generator: Launchpad (build 18302)\n"
+"X-Launchpad-Export-Date: 2017-02-14 20:37+0000\n"
+"X-Generator: Launchpad (build 18326)\n"
 "X-Poedit-SearchPath-0: br\n"
 "X-Poedit-Basepath: .\n"
 
@@ -39,8 +38,8 @@ msgstr "kellidoù;kontoù;kellidsteuñv;personel;arc'hant;"
 
 #: ../data/homebank.appdata.xml.in.h:1
 msgid ""
-"HomeBank is a free software (as in \"free speech\" and also as in \"free beer"
-"\") that will assist you to manage your personal accounting."
+"HomeBank is a free software (as in \"free speech\" and also as in \"free "
+"beer\") that will assist you to manage your personal accounting."
 msgstr ""
 "Ur meziant digor ha digoust eo HomeBank a roy skoazell deoc'h da verañ ho "
 "jederezh personel."
@@ -846,9 +845,9 @@ msgstr "Dispignoù pouezusañ"
 
 #. future usage
 #: ../src/dsp_mainwindow.c:1168
-#, fuzzy, c-format
+#, c-format
 msgid "Top %d spending"
-msgstr "Dispignoù pouezusañ"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:1335 ../src/rep_stats.c:1025 ../src/rep_stats.c:1045
 #: ../src/ui-budget.c:131 ../src/ui-category.c:393 ../src/ui-category.c:594
@@ -906,9 +905,8 @@ msgid "File error"
 msgstr "Fazi gant ar restr"
 
 #: ../src/dsp_mainwindow.c:1929
-#, fuzzy
 msgid "(no institution)"
-msgstr "Ensavadur"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2081
 msgid "Grand total"
@@ -993,19 +991,16 @@ msgid "Collapse all"
 msgstr "Diskar pep tra"
 
 #: ../src/dsp_mainwindow.c:2869
-#, fuzzy
 msgid "Show all"
-msgstr "Diskouez ar munu_doù"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2874
-#, fuzzy
 msgid "By type"
-msgstr "(rizh ebet)"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2875
-#, fuzzy
 msgid "By institition"
-msgstr "Ensavadur"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2926
 msgid "Where your money goes"
@@ -1171,7 +1166,7 @@ msgstr "- marz -"
 #. label = gtk_label_new(_("General"));
 #. page = ui_flt_manage_page_general(&data);
 #. gtk_notebook_append_page (GTK_NOTEBOOK (notebook), page, label);
-#.
+#. 
 #: ../src/list_operation.c:1044 ../src/list_operation.c:1362
 #: ../src/rep_balance.c:1240 ../src/rep_vehicle.c:218 ../src/rep_vehicle.c:1097
 #: ../src/ui-filter.c:1302 ../src/ui-pref.c:1540
@@ -1586,7 +1581,7 @@ msgstr "_Dassammañ"
 msgid "_View by:"
 msgstr "_Gwelout dre :"
 
-#.
+#. 
 #. LST_CAR_DATE,
 #. LST_CAR_WORDING,
 #. LST_CAR_METER,
@@ -1595,10 +1590,10 @@ msgstr "_Gwelout dre :"
 #. LST_CAR_AMOUNT,
 #. LST_CAR_DIST,
 #. LST_CAR_100KM
-#.
-#.
+#. 
+#. 
 #. column: Wording
-#.
+#. 
 #. column = gtk_tree_view_column_new();
 #. gtk_tree_view_column_set_title(column, _("Wording"));
 #. gtk_tree_view_append_column (GTK_TREE_VIEW(view), column);
@@ -1606,7 +1601,7 @@ msgstr "_Gwelout dre :"
 #. gtk_tree_view_column_pack_start(column, renderer, TRUE);
 #. gtk_tree_view_column_add_attribute(column, renderer, "text", LST_CAR_WORDING);
 #. //gtk_tree_view_column_set_cell_data_func(column, renderer, repvehicle_text_cell_data_function, NULL, NULL);
-#.
+#. 
 #. column: Meter
 #: ../src/rep_vehicle.c:219 ../src/rep_vehicle.c:1130
 msgid "Meter"
@@ -1863,7 +1858,8 @@ msgstr "(patrom %d)"
 
 #: ../src/ui-archive.c:391
 msgid "If you delete a scheduled/template, it will be permanently lost."
-msgstr "Mar bez diverket ur gwezhiadur steuñvet/ur patrom e vo kollet da vat."
+msgstr ""
+"Mar bez diverket ur gwezhiadur steuñvet/ur patrom e vo kollet da vat."
 
 #: ../src/ui-archive.c:983 ../src/ui-transaction.c:968
 msgid "_Amount:"
@@ -3404,12 +3400,3 @@ msgstr "Enlakaat"
 #: ../src/ui-widgets.c:935
 msgid "Exclude"
 msgstr "Ezlakaat"
-
-#~ msgid "Edit Filter"
-#~ msgstr "Embann ar sil"
-
-#~ msgid "Configure _Preferences"
-#~ msgstr "Kefluniañ ar _gwellvezioù"
-
-#~ msgid "Edit the filter"
-#~ msgstr "Daskemmañ ar sil"
