--- a/po/de.po
+++ b/po/de.po
@@ -11,12 +11,11 @@ msgstr ""
 "PO-Revision-Date: 2016-11-20 20:42+0000\n"
 "Last-Translator: Denis Graipel <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
-"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-01-22 16:08+0000\n"
-"X-Generator: Launchpad (build 18302)\n"
+"X-Launchpad-Export-Date: 2017-02-14 20:36+0000\n"
+"X-Generator: Launchpad (build 18326)\n"
 
 #: ../data/homebank.desktop.in.in.h:1 ../src/dsp_mainwindow.c:879
 msgid "HomeBank"
@@ -37,8 +36,8 @@ msgstr "Finanzen;Buchungen;Budget;Persönliches;Geld;"
 
 #: ../data/homebank.appdata.xml.in.h:1
 msgid ""
-"HomeBank is a free software (as in \"free speech\" and also as in \"free beer"
-"\") that will assist you to manage your personal accounting."
+"HomeBank is a free software (as in \"free speech\" and also as in \"free "
+"beer\") that will assist you to manage your personal accounting."
 msgstr ""
 "HomeBank ist kostenlose Software, das Sie bei der  Verwaltung Ihrer Konten "
 "unterstützt."
@@ -173,7 +172,8 @@ msgstr ""
 msgid ""
 "Do you want to create a template with\n"
 "each of the selected transaction ?"
-msgstr "Möchten Sie eine Vorlage aus allen gewählten Transaktionen erstellen?"
+msgstr ""
+"Möchten Sie eine Vorlage aus allen gewählten Transaktionen erstellen?"
 
 #: ../src/dsp_account.c:1618
 msgid ""
@@ -196,7 +196,8 @@ msgstr "Ä_ndern"
 
 #: ../src/dsp_account.c:1769
 msgid "Are you sure you want to toggle the status Reconciled?"
-msgstr "Sind Sie sicher, dass Sie den Status \"Abgestimmt\" wechseln möchten?"
+msgstr ""
+"Sind Sie sicher, dass Sie den Status \"Abgestimmt\" wechseln möchten?"
 
 #: ../src/dsp_account.c:1771
 msgid "_Toggle"
@@ -839,9 +840,9 @@ msgstr "Höchste Ausgaben"
 
 #. future usage
 #: ../src/dsp_mainwindow.c:1168
-#, fuzzy, c-format
+#, c-format
 msgid "Top %d spending"
-msgstr "Höchste Ausgaben"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:1335 ../src/rep_stats.c:1025 ../src/rep_stats.c:1045
 #: ../src/ui-budget.c:131 ../src/ui-category.c:393 ../src/ui-category.c:594
@@ -899,9 +900,8 @@ msgid "File error"
 msgstr "Dateifehler"
 
 #: ../src/dsp_mainwindow.c:1929
-#, fuzzy
 msgid "(no institution)"
-msgstr "Institut"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2081
 msgid "Grand total"
@@ -986,19 +986,16 @@ msgid "Collapse all"
 msgstr "Alle zuklappen"
 
 #: ../src/dsp_mainwindow.c:2869
-#, fuzzy
 msgid "Show all"
-msgstr "_Details anzeigen"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2874
-#, fuzzy
 msgid "By type"
-msgstr "Kein Typ"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2875
-#, fuzzy
 msgid "By institition"
-msgstr "Institut"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2926
 msgid "Where your money goes"
@@ -1165,7 +1162,7 @@ msgstr "- aufgeteilt -"
 #. label = gtk_label_new(_("General"));
 #. page = ui_flt_manage_page_general(&data);
 #. gtk_notebook_append_page (GTK_NOTEBOOK (notebook), page, label);
-#.
+#. 
 #: ../src/list_operation.c:1044 ../src/list_operation.c:1362
 #: ../src/rep_balance.c:1240 ../src/rep_vehicle.c:218 ../src/rep_vehicle.c:1097
 #: ../src/ui-filter.c:1302 ../src/ui-pref.c:1540
@@ -1580,7 +1577,7 @@ msgstr "_Ansammeln"
 msgid "_View by:"
 msgstr "_Gesehen von:"
 
-#.
+#. 
 #. LST_CAR_DATE,
 #. LST_CAR_WORDING,
 #. LST_CAR_METER,
@@ -1589,10 +1586,10 @@ msgstr "_Gesehen von:"
 #. LST_CAR_AMOUNT,
 #. LST_CAR_DIST,
 #. LST_CAR_100KM
-#.
-#.
+#. 
+#. 
 #. column: Wording
-#.
+#. 
 #. column = gtk_tree_view_column_new();
 #. gtk_tree_view_column_set_title(column, _("Wording"));
 #. gtk_tree_view_append_column (GTK_TREE_VIEW(view), column);
@@ -1600,7 +1597,7 @@ msgstr "_Gesehen von:"
 #. gtk_tree_view_column_pack_start(column, renderer, TRUE);
 #. gtk_tree_view_column_add_attribute(column, renderer, "text", LST_CAR_WORDING);
 #. //gtk_tree_view_column_set_cell_data_func(column, renderer, repvehicle_text_cell_data_function, NULL, NULL);
-#.
+#. 
 #. column: Meter
 #: ../src/rep_vehicle.c:219 ../src/rep_vehicle.c:1130
 msgid "Meter"
@@ -3252,7 +3249,8 @@ msgstr "Einstellungen"
 msgid ""
 "You will have to restart HomeBank\n"
 "for the language change to take effect."
-msgstr "HomeBank muss neugestartet werden um den Sprachwechsel durchzuführen."
+msgstr ""
+"HomeBank muss neugestartet werden um den Sprachwechsel durchzuführen."
 
 #: ../src/ui-split.c:374
 msgid "_Remove"
@@ -3403,12 +3401,3 @@ msgstr "Einbeziehen"
 #: ../src/ui-widgets.c:935
 msgid "Exclude"
 msgstr "Ausschliessen"
-
-#~ msgid "Edit Filter"
-#~ msgstr "Filter bearbeiten"
-
-#~ msgid "Edit the filter"
-#~ msgstr "Filter einstellen"
-
-#~ msgid "Configure _Preferences"
-#~ msgstr "Konfiguriere _Optionen"
