--- a/po/el.po
+++ b/po/el.po
@@ -8,15 +8,14 @@ msgstr ""
 "Project-Id-Version: homebank\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-01-22 18:52+0100\n"
-"PO-Revision-Date: 2016-08-08 11:16+0000\n"
-"Last-Translator: ntelos <Unknown>\n"
+"PO-Revision-Date: 2017-01-27 07:31+0000\n"
+"Last-Translator: George Stefanakis <Unknown>\n"
 "Language-Team: Hellenic <christosvas@in.gr>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-01-22 16:08+0000\n"
-"X-Generator: Launchpad (build 18302)\n"
+"X-Launchpad-Export-Date: 2017-02-14 20:36+0000\n"
+"X-Generator: Launchpad (build 18326)\n"
 "X-Poedit-Country: GREECE\n"
 "X-Poedit-Language: Greek\n"
 
@@ -39,8 +38,8 @@ msgstr "Οικονομία;λογιστικά;προϋπολογισμός; πρ
 
 #: ../data/homebank.appdata.xml.in.h:1
 msgid ""
-"HomeBank is a free software (as in \"free speech\" and also as in \"free beer"
-"\") that will assist you to manage your personal accounting."
+"HomeBank is a free software (as in \"free speech\" and also as in \"free "
+"beer\") that will assist you to manage your personal accounting."
 msgstr ""
 "Το λογισμικό του HomeBank είναι ελεύθερο (με την έννοια της \"ελευθερίας του "
 "λόγου\" αλλά και με την έννοια \"δωρεάν (ελεύθερη) μπύρα\"), που θα σας "
@@ -196,7 +195,8 @@ msgstr "Είστε σίγουροι ότι θέλετε να αλλάξετε τ
 
 #: ../src/dsp_account.c:1708 ../src/dsp_account.c:1770
 msgid "Some transaction in your selection are already Reconciled."
-msgstr "Ορισμένες από τις επιλεγμένες συνναλαγές σας είναι ήδη εναρμωνησμένες"
+msgstr ""
+"Ορισμένες από τις επιλεγμένες συνναλαγές σας είναι ήδη εναρμωνησμένες"
 
 #: ../src/dsp_account.c:1709 ../src/ui-assist-start.c:265
 #: ../src/ui-dialogs.c:368
@@ -226,7 +226,7 @@ msgstr "%d αντικείμενα (%d επιλεγμένα %s)"
 #: ../src/dsp_account.c:2134
 #, c-format
 msgid "[closed account] %s"
-msgstr ""
+msgstr "[Κλειστός Λογαριασμός] %s"
 
 #. name, icon-name, label
 #: ../src/dsp_account.c:2243
@@ -313,7 +313,8 @@ msgstr "Ε_κκαθάριση"
 
 #: ../src/dsp_account.c:2259
 msgid "Toggle cleared for selected transaction(s)"
-msgstr "Ενναλαγή της κατάστασης εκκαθαρισένο για την επιλεγμένη συνναλαγή(ες)"
+msgstr ""
+"Ενναλαγή της κατάστασης εκκαθαρισένο για την επιλεγμένη συνναλαγή(ες)"
 
 #: ../src/dsp_account.c:2260
 msgid "_Reconciled"
@@ -321,7 +322,8 @@ msgstr "_Εναρμονησμένο"
 
 #: ../src/dsp_account.c:2260
 msgid "Toggle reconciled for selected transaction(s)"
-msgstr "Ενναλαγή της κατάστασης εναρμονησμένο για την επιλεγμένη συνναλαγή(ες)"
+msgstr ""
+"Ενναλαγή της κατάστασης εναρμονησμένο για την επιλεγμένη συνναλαγή(ες)"
 
 #: ../src/dsp_account.c:2262
 msgid "_Multiple Edit..."
@@ -428,7 +430,7 @@ msgstr "Επαναφορά φίλτρων"
 #: ../src/dsp_account.c:2519 ../src/rep_balance.c:871 ../src/rep_budget.c:1115
 #: ../src/rep_stats.c:1526 ../src/rep_time.c:1425 ../src/rep_vehicle.c:735
 msgid "Euro _minor"
-msgstr ""
+msgstr "Euro _ελάχιστο"
 
 #. header
 #: ../src/dsp_mainwindow.c:150 ../src/dsp_mainwindow.c:2654
@@ -780,12 +782,12 @@ msgstr "_Χρονοδιάγραμμα"
 
 #: ../src/dsp_mainwindow.c:239 ../src/ui-pref.c:92
 msgid "Euro minor"
-msgstr ""
+msgstr "Euro ελάχιστο"
 
 #: ../src/dsp_mainwindow.c:369
 #, c-format
 msgid "Revert unsaved changes to file '%s'?"
-msgstr ""
+msgstr "Επαναφορά μη αποθηκευμένων αλλαγών στο αρχειο '%s';"
 
 #: ../src/dsp_mainwindow.c:372
 msgid ""
@@ -793,8 +795,8 @@ msgid ""
 "- File will be reloaded from the last save (.xhb~)"
 msgstr ""
 "- Αλλαγές που τυχόν έγιναν στο αρχείο θα χαθούν οριστικά\n"
-"- Θα φορτωθεί αντίγραφο ασφαλείας από την τελευταία αποθήκευση (.xhb ~) (."
-"xhb~)"
+"- Θα φορτωθεί αντίγραφο ασφαλείας από την τελευταία αποθήκευση (.xhb ~) "
+"(.xhb~)"
 
 #: ../src/dsp_mainwindow.c:379
 msgid "_Revert"
@@ -849,9 +851,9 @@ msgstr "Κορυφαίες δαπάνες"
 
 #. future usage
 #: ../src/dsp_mainwindow.c:1168
-#, fuzzy, c-format
+#, c-format
 msgid "Top %d spending"
-msgstr "Κορυφαίες δαπάνες"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:1335 ../src/rep_stats.c:1025 ../src/rep_stats.c:1045
 #: ../src/ui-budget.c:131 ../src/ui-category.c:393 ../src/ui-category.c:594
@@ -909,9 +911,8 @@ msgid "File error"
 msgstr "Σφάλμα αρχείου"
 
 #: ../src/dsp_mainwindow.c:1929
-#, fuzzy
 msgid "(no institution)"
-msgstr "Θεσμός"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2081
 msgid "Grand total"
@@ -996,18 +997,16 @@ msgid "Collapse all"
 msgstr "Σύμπτυξη όλων"
 
 #: ../src/dsp_mainwindow.c:2869
-#, fuzzy
 msgid "Show all"
-msgstr "Εμφάνιση _λεπτομερειών"
+msgstr "Προβολή όλων"
 
 #: ../src/dsp_mainwindow.c:2874
 msgid "By type"
-msgstr ""
+msgstr "Κατά τύπο"
 
 #: ../src/dsp_mainwindow.c:2875
-#, fuzzy
 msgid "By institition"
-msgstr "Θεσμός"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2926
 msgid "Where your money goes"
@@ -1173,7 +1172,7 @@ msgstr "-διαχωρισμός-"
 #. label = gtk_label_new(_("General"));
 #. page = ui_flt_manage_page_general(&data);
 #. gtk_notebook_append_page (GTK_NOTEBOOK (notebook), page, label);
-#.
+#. 
 #: ../src/list_operation.c:1044 ../src/list_operation.c:1362
 #: ../src/rep_balance.c:1240 ../src/rep_vehicle.c:218 ../src/rep_vehicle.c:1097
 #: ../src/ui-filter.c:1302 ../src/ui-pref.c:1540
@@ -1376,7 +1375,7 @@ msgstr "Δείτε τα αποτελέσματα ως ντόνατ"
 
 #: ../src/rep_stats.c:69 ../src/ui-filter.c:1265
 msgid "Edit filter"
-msgstr ""
+msgstr "Επεξεργασία φίλτρου"
 
 #. is_active
 #. name, icon-name
@@ -1588,7 +1587,7 @@ msgstr "_Άθροισμα"
 msgid "_View by:"
 msgstr "_Προβολή κατά:"
 
-#.
+#. 
 #. LST_CAR_DATE,
 #. LST_CAR_WORDING,
 #. LST_CAR_METER,
@@ -1597,10 +1596,10 @@ msgstr "_Προβολή κατά:"
 #. LST_CAR_AMOUNT,
 #. LST_CAR_DIST,
 #. LST_CAR_100KM
-#.
-#.
+#. 
+#. 
 #. column: Wording
-#.
+#. 
 #. column = gtk_tree_view_column_new();
 #. gtk_tree_view_column_set_title(column, _("Wording"));
 #. gtk_tree_view_append_column (GTK_TREE_VIEW(view), column);
@@ -1608,7 +1607,7 @@ msgstr "_Προβολή κατά:"
 #. gtk_tree_view_column_pack_start(column, renderer, TRUE);
 #. gtk_tree_view_column_add_attribute(column, renderer, "text", LST_CAR_WORDING);
 #. //gtk_tree_view_column_set_cell_data_func(column, renderer, repvehicle_text_cell_data_function, NULL, NULL);
-#.
+#. 
 #. column: Meter
 #: ../src/rep_vehicle.c:219 ../src/rep_vehicle.c:1130
 msgid "Meter"
@@ -1786,15 +1785,15 @@ msgstr "αυτός ο λογαριασμός έκλεισε"
 
 #: ../src/ui-account.c:1323
 msgid "Current check number"
-msgstr ""
+msgstr "Τρέχον νούμερο επιταγής"
 
 #: ../src/ui-account.c:1327
 msgid "Checkbook _1:"
-msgstr ""
+msgstr "Μπλοκ Επιταγών_1"
 
 #: ../src/ui-account.c:1334
 msgid "Checkbook _2:"
-msgstr ""
+msgstr "Μπλοκ Επιταγών_2"
 
 #: ../src/ui-account.c:1346 ../src/ui-budget.c:1189
 msgid "Options"
@@ -2547,7 +2546,7 @@ msgstr "Online ενημέρωση"
 
 #: ../src/ui-currency.c:1553
 msgid "Set as base"
-msgstr ""
+msgstr "Θέστε ως βάση"
 
 #: ../src/ui-dialogs.c:176
 msgid "File statistics"
@@ -2570,6 +2569,9 @@ msgid ""
 "Starting v5.1, HomeBank can manage several currencies\n"
 "if the currency below is not correct, please change it:"
 msgstr ""
+"Ξεκινώντας από την  έκδοση v5.1, το Homebank  μπορεί να διαχειριστή αρκετά "
+"νομίσματα\n"
+"αν το παρακάτω νόμισμα δεν είναι σωστό, παρακαλώ αλλάξτε το:"
 
 #: ../src/ui-dialogs.c:475
 msgid "Import from CSV"
@@ -2751,11 +2753,11 @@ msgstr "_Ετικέτα:"
 
 #: ../src/ui-filter.c:1060
 msgid "Filter Amount"
-msgstr ""
+msgstr "Φίλτρο Ποσού"
 
 #: ../src/ui-filter.c:1106
 msgid "Filter Status"
-msgstr ""
+msgstr "Κατάσταση Φίλτορυ"
 
 #: ../src/ui-filter.c:1121
 msgid "reconciled"
@@ -2783,7 +2785,7 @@ msgstr ""
 
 #: ../src/ui-filter.c:1165
 msgid "Filter Payment"
-msgstr ""
+msgstr "Φίλτρο Πληρωμών"
 
 #. clear button
 #: ../src/ui-filter.c:1268 ../src/ui-pref.c:2058
@@ -3377,12 +3379,3 @@ msgstr "Συμπερίληψη"
 #: ../src/ui-widgets.c:935
 msgid "Exclude"
 msgstr "Εξαίρεση"
-
-#~ msgid "Edit the filter"
-#~ msgstr "Επεξεργασία φίλτρου"
-
-#~ msgid "Edit Filter"
-#~ msgstr "Επεξεργασία φίλτρου"
-
-#~ msgid "Configure _Preferences"
-#~ msgstr "Ρύθμιση ε_πιλογών"
