--- a/po/eu.po
+++ b/po/eu.po
@@ -6,17 +6,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: homebank\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2017-01-22 18:52+0100\n"
 "PO-Revision-Date: 2016-01-27 22:32+0000\n"
 "Last-Translator: Mikel Haranburu <Unknown>\n"
 "Language-Team: Basque <eu@li.org>\n"
-"Language: eu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-01-22 16:09+0000\n"
-"X-Generator: Launchpad (build 18302)\n"
+"X-Launchpad-Export-Date: 2017-02-14 20:37+0000\n"
+"X-Generator: Launchpad (build 18326)\n"
 
 #: ../data/homebank.desktop.in.in.h:1 ../src/dsp_mainwindow.c:879
 msgid "HomeBank"
@@ -37,8 +36,8 @@ msgstr "finantza;kontuak;aurrekontua;pertsonala;dirua"
 
 #: ../data/homebank.appdata.xml.in.h:1
 msgid ""
-"HomeBank is a free software (as in \"free speech\" and also as in \"free beer"
-"\") that will assist you to manage your personal accounting."
+"HomeBank is a free software (as in \"free speech\" and also as in \"free "
+"beer\") that will assist you to manage your personal accounting."
 msgstr ""
 "Homebank software librea da, lagunduko zaituena zure kontularitza pertsonala "
 "egiten."
@@ -734,7 +733,8 @@ msgstr "Aplikazio hau itzuli..."
 
 #: ../src/dsp_mainwindow.c:225
 msgid "Connect to the LaunchPad website to help translate this application"
-msgstr "LaunchPad webgunera konektatu aplikazio hau itzultzen laguntza izateko"
+msgstr ""
+"LaunchPad webgunera konektatu aplikazio hau itzultzen laguntza izateko"
 
 #: ../src/dsp_mainwindow.c:226
 msgid "Report a Problem..."
@@ -833,9 +833,9 @@ msgstr "Gasturik handiena"
 
 #. future usage
 #: ../src/dsp_mainwindow.c:1168
-#, fuzzy, c-format
+#, c-format
 msgid "Top %d spending"
-msgstr "Gasturik handiena"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:1335 ../src/rep_stats.c:1025 ../src/rep_stats.c:1045
 #: ../src/ui-budget.c:131 ../src/ui-category.c:393 ../src/ui-category.c:594
@@ -977,9 +977,8 @@ msgid "Collapse all"
 msgstr ""
 
 #: ../src/dsp_mainwindow.c:2869
-#, fuzzy
 msgid "Show all"
-msgstr "Erakuts _zehaztapenak"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2874
 msgid "By type"
@@ -1153,7 +1152,7 @@ msgstr ""
 #. label = gtk_label_new(_("General"));
 #. page = ui_flt_manage_page_general(&data);
 #. gtk_notebook_append_page (GTK_NOTEBOOK (notebook), page, label);
-#.
+#. 
 #: ../src/list_operation.c:1044 ../src/list_operation.c:1362
 #: ../src/rep_balance.c:1240 ../src/rep_vehicle.c:218 ../src/rep_vehicle.c:1097
 #: ../src/ui-filter.c:1302 ../src/ui-pref.c:1540
@@ -1568,7 +1567,7 @@ msgstr "_Metatua"
 msgid "_View by:"
 msgstr "_Honela ikus:"
 
-#.
+#. 
 #. LST_CAR_DATE,
 #. LST_CAR_WORDING,
 #. LST_CAR_METER,
@@ -1577,10 +1576,10 @@ msgstr "_Honela ikus:"
 #. LST_CAR_AMOUNT,
 #. LST_CAR_DIST,
 #. LST_CAR_100KM
-#.
-#.
+#. 
+#. 
 #. column: Wording
-#.
+#. 
 #. column = gtk_tree_view_column_new();
 #. gtk_tree_view_column_set_title(column, _("Wording"));
 #. gtk_tree_view_append_column (GTK_TREE_VIEW(view), column);
@@ -1588,7 +1587,7 @@ msgstr "_Honela ikus:"
 #. gtk_tree_view_column_pack_start(column, renderer, TRUE);
 #. gtk_tree_view_column_add_attribute(column, renderer, "text", LST_CAR_WORDING);
 #. //gtk_tree_view_column_set_cell_data_func(column, renderer, repvehicle_text_cell_data_function, NULL, NULL);
-#.
+#. 
 #. column: Meter
 #: ../src/rep_vehicle.c:219 ../src/rep_vehicle.c:1130
 msgid "Meter"
@@ -3329,12 +3328,3 @@ msgstr "Sartu"
 #: ../src/ui-widgets.c:935
 msgid "Exclude"
 msgstr "Kanpoan"
-
-#~ msgid "Edit the filter"
-#~ msgstr "Iragazkia editatu"
-
-#~ msgid "Edit Filter"
-#~ msgstr "Iragazkia editatu"
-
-#~ msgid "Configure _Preferences"
-#~ msgstr "Konfigurazio _Hautapenak"
