--- a/po/he.po
+++ b/po/he.po
@@ -11,12 +11,11 @@ msgstr ""
 "PO-Revision-Date: 2015-12-27 07:26+0000\n"
 "Last-Translator: GenghisKhan <genghiskhan@gmx.ca>\n"
 "Language-Team: Hebrew <he@li.org>\n"
-"Language: he\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-01-22 16:08+0000\n"
-"X-Generator: Launchpad (build 18302)\n"
+"X-Launchpad-Export-Date: 2017-02-14 20:36+0000\n"
+"X-Generator: Launchpad (build 18326)\n"
 "X-Language: he\n"
 "X-Source-Language: en\n"
 
@@ -39,8 +38,8 @@ msgstr "מימון;פיננסים;חשבונאות;תקציב;אישי;כסף;"
 
 #: ../data/homebank.appdata.xml.in.h:1
 msgid ""
-"HomeBank is a free software (as in \"free speech\" and also as in \"free beer"
-"\") that will assist you to manage your personal accounting."
+"HomeBank is a free software (as in \"free speech\" and also as in \"free "
+"beer\") that will assist you to manage your personal accounting."
 msgstr ""
 "‏HomeBank הינה תכנה חופשית (במובן של \"חופש ביטוי\" וגם של \"בירה בחינם\") "
 "אשר תסייע לך לנהל את החשבונות האישיים שלך."
@@ -841,9 +840,9 @@ msgstr "הוצאה עיקרית"
 
 #. future usage
 #: ../src/dsp_mainwindow.c:1168
-#, fuzzy, c-format
+#, c-format
 msgid "Top %d spending"
-msgstr "הוצאה עיקרית"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:1335 ../src/rep_stats.c:1025 ../src/rep_stats.c:1045
 #: ../src/ui-budget.c:131 ../src/ui-category.c:393 ../src/ui-category.c:594
@@ -901,9 +900,8 @@ msgid "File error"
 msgstr "שגיאת קובץ"
 
 #: ../src/dsp_mainwindow.c:1929
-#, fuzzy
 msgid "(no institution)"
-msgstr "מוסד"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2081
 msgid "Grand total"
@@ -989,19 +987,16 @@ msgid "Collapse all"
 msgstr "צמצם הכל"
 
 #: ../src/dsp_mainwindow.c:2869
-#, fuzzy
 msgid "Show all"
-msgstr "הצג _פרטים"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2874
-#, fuzzy
 msgid "By type"
-msgstr "(אין טיפוס)"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2875
-#, fuzzy
 msgid "By institition"
-msgstr "מוסד"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2926
 msgid "Where your money goes"
@@ -1167,7 +1162,7 @@ msgstr "- פילוג -"
 #. label = gtk_label_new(_("General"));
 #. page = ui_flt_manage_page_general(&data);
 #. gtk_notebook_append_page (GTK_NOTEBOOK (notebook), page, label);
-#.
+#. 
 #: ../src/list_operation.c:1044 ../src/list_operation.c:1362
 #: ../src/rep_balance.c:1240 ../src/rep_vehicle.c:218 ../src/rep_vehicle.c:1097
 #: ../src/ui-filter.c:1302 ../src/ui-pref.c:1540
@@ -1583,7 +1578,7 @@ msgstr "_צבור"
 msgid "_View by:"
 msgstr "_הצג לפי:"
 
-#.
+#. 
 #. LST_CAR_DATE,
 #. LST_CAR_WORDING,
 #. LST_CAR_METER,
@@ -1592,10 +1587,10 @@ msgstr "_הצג לפי:"
 #. LST_CAR_AMOUNT,
 #. LST_CAR_DIST,
 #. LST_CAR_100KM
-#.
-#.
+#. 
+#. 
 #. column: Wording
-#.
+#. 
 #. column = gtk_tree_view_column_new();
 #. gtk_tree_view_column_set_title(column, _("Wording"));
 #. gtk_tree_view_append_column (GTK_TREE_VIEW(view), column);
@@ -1603,7 +1598,7 @@ msgstr "_הצג לפי:"
 #. gtk_tree_view_column_pack_start(column, renderer, TRUE);
 #. gtk_tree_view_column_add_attribute(column, renderer, "text", LST_CAR_WORDING);
 #. //gtk_tree_view_column_set_cell_data_func(column, renderer, repvehicle_text_cell_data_function, NULL, NULL);
-#.
+#. 
 #. column: Meter
 #: ../src/rep_vehicle.c:219 ../src/rep_vehicle.c:1130
 msgid "Meter"
@@ -3098,8 +3093,8 @@ msgstr ""
 "‏%b שם מקוצר של חודש של מקומיות. \n"
 "‏%B שם מלא של חודש של מקומיות. \n"
 "‏%c ייצוג תאריך ושעה מתאימים למקומיות. \n"
-"‏%C מספר מאה (השנה מחולקת עם 100 וקטועה למספר שלם) בתור מספר עשרוני "
-"[00-99]. \n"
+"‏%C מספר מאה (השנה מחולקת עם 100 וקטועה למספר שלם) בתור מספר עשרוני [00-99]. "
+"\n"
 "‏%d יום של החודש בתור מספר עשרוני [01,31]. \n"
 "‏%D אותו דבר כמו %m/%d/%y. \n"
 "‏%e יום של החודש בתור מספר עשרוני [1,31]; ספרה יחידה באה לפני רווח. \n"
@@ -3397,12 +3392,3 @@ msgstr "הכלל"
 #: ../src/ui-widgets.c:935
 msgid "Exclude"
 msgstr "הוצא"
-
-#~ msgid "Edit the filter"
-#~ msgstr "ערוך את המסנן"
-
-#~ msgid "Configure _Preferences"
-#~ msgstr "להגדיר _העדפות"
-
-#~ msgid "Edit Filter"
-#~ msgstr "עריכת מסנן"
