--- a/po/tr.po
+++ b/po/tr.po
@@ -6,17 +6,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: homebank\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2017-01-22 18:52+0100\n"
 "PO-Revision-Date: 2016-12-24 09:49+0000\n"
 "Last-Translator: Fikret Erdemir <Unknown>\n"
 "Language-Team: Turkish <tr@li.org>\n"
-"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-01-22 16:08+0000\n"
-"X-Generator: Launchpad (build 18302)\n"
+"X-Launchpad-Export-Date: 2017-02-14 20:36+0000\n"
+"X-Generator: Launchpad (build 18326)\n"
 
 #: ../data/homebank.desktop.in.in.h:1 ../src/dsp_mainwindow.c:879
 msgid "HomeBank"
@@ -37,8 +36,8 @@ msgstr "finans;muhasebe;bütçe;kişisel;para"
 
 #: ../data/homebank.appdata.xml.in.h:1
 msgid ""
-"HomeBank is a free software (as in \"free speech\" and also as in \"free beer"
-"\") that will assist you to manage your personal accounting."
+"HomeBank is a free software (as in \"free speech\" and also as in \"free "
+"beer\") that will assist you to manage your personal accounting."
 msgstr ""
 "HomeBank (\"serbestçe konuşma\" olarak ve aynı zamanda \"bedava bira\" gibi) "
 "kişisel muhasebenizi yönetmek için yardımcı olacak ücretsiz bir yazılımdır."
@@ -845,9 +844,9 @@ msgstr "Çok harcananlar"
 
 #. future usage
 #: ../src/dsp_mainwindow.c:1168
-#, fuzzy, c-format
+#, c-format
 msgid "Top %d spending"
-msgstr "Çok harcananlar"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:1335 ../src/rep_stats.c:1025 ../src/rep_stats.c:1045
 #: ../src/ui-budget.c:131 ../src/ui-category.c:393 ../src/ui-category.c:594
@@ -903,9 +902,8 @@ msgid "File error"
 msgstr "Dosya hatası"
 
 #: ../src/dsp_mainwindow.c:1929
-#, fuzzy
 msgid "(no institution)"
-msgstr "Kurum"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2081
 msgid "Grand total"
@@ -990,19 +988,16 @@ msgid "Collapse all"
 msgstr "Tümünü daralt"
 
 #: ../src/dsp_mainwindow.c:2869
-#, fuzzy
 msgid "Show all"
-msgstr "_Detayları göster"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2874
-#, fuzzy
 msgid "By type"
-msgstr "(belirsiz tip)"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2875
-#, fuzzy
 msgid "By institition"
-msgstr "Kurum"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2926
 msgid "Where your money goes"
@@ -1168,7 +1163,7 @@ msgstr "- böl -"
 #. label = gtk_label_new(_("General"));
 #. page = ui_flt_manage_page_general(&data);
 #. gtk_notebook_append_page (GTK_NOTEBOOK (notebook), page, label);
-#.
+#. 
 #: ../src/list_operation.c:1044 ../src/list_operation.c:1362
 #: ../src/rep_balance.c:1240 ../src/rep_vehicle.c:218 ../src/rep_vehicle.c:1097
 #: ../src/ui-filter.c:1302 ../src/ui-pref.c:1540
@@ -1583,7 +1578,7 @@ msgstr "Kümüle"
 msgid "_View by:"
 msgstr "_Göster:"
 
-#.
+#. 
 #. LST_CAR_DATE,
 #. LST_CAR_WORDING,
 #. LST_CAR_METER,
@@ -1592,10 +1587,10 @@ msgstr "_Göster:"
 #. LST_CAR_AMOUNT,
 #. LST_CAR_DIST,
 #. LST_CAR_100KM
-#.
-#.
+#. 
+#. 
 #. column: Wording
-#.
+#. 
 #. column = gtk_tree_view_column_new();
 #. gtk_tree_view_column_set_title(column, _("Wording"));
 #. gtk_tree_view_append_column (GTK_TREE_VIEW(view), column);
@@ -1603,7 +1598,7 @@ msgstr "_Göster:"
 #. gtk_tree_view_column_pack_start(column, renderer, TRUE);
 #. gtk_tree_view_column_add_attribute(column, renderer, "text", LST_CAR_WORDING);
 #. //gtk_tree_view_column_set_cell_data_func(column, renderer, repvehicle_text_cell_data_function, NULL, NULL);
-#.
+#. 
 #. column: Meter
 #: ../src/rep_vehicle.c:219 ../src/rep_vehicle.c:1130
 msgid "Meter"
@@ -1858,7 +1853,8 @@ msgstr "(şablon %d)"
 
 #: ../src/ui-archive.c:391
 msgid "If you delete a scheduled/template, it will be permanently lost."
-msgstr "Eğer bir planlamayı/şablonu silerseniz, o kalıcı olarak yok olacaktır."
+msgstr ""
+"Eğer bir planlamayı/şablonu silerseniz, o kalıcı olarak yok olacaktır."
 
 #: ../src/ui-archive.c:983 ../src/ui-transaction.c:968
 msgid "_Amount:"
@@ -3108,8 +3104,8 @@ msgstr ""
 "%b yerel kısaltılmış ay adı. \n"
 "%B yerel tam ay adı. \n"
 "%c yerel kısatılmış tarih ve zaman ifadesi. \n"
-"%C ondalık olarak yüzyıl sayısı (yıl yüze bölünür ve tamsayısı alınır.) "
-"[00-99]. \n"
+"%C ondalık olarak yüzyıl sayısı (yıl yüze bölünür ve tamsayısı alınır.) [00-"
+"99]. \n"
 "%d ondalık olarak ayın günü [01,31]. \n"
 "%D  %m/%d/%y ile aynı. \n"
 "%e ondalık olarak ayın günü [1,31]; bir boşluğu izleyen tek rakam. \n"
@@ -3406,12 +3402,3 @@ msgstr "Dahil et"
 #: ../src/ui-widgets.c:935
 msgid "Exclude"
 msgstr "Hariç Tut"
-
-#~ msgid "Edit the filter"
-#~ msgstr "Filtreyi düzenle"
-
-#~ msgid "Edit Filter"
-#~ msgstr "Süzmeyi Düzenle"
-
-#~ msgid "Configure _Preferences"
-#~ msgstr "_Tercihleri Yapılandır"
