--- a/po/vi.po
+++ b/po/vi.po
@@ -6,17 +6,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: homebank\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2017-01-22 18:52+0100\n"
 "PO-Revision-Date: 2015-11-19 10:51+0000\n"
 "Last-Translator: Phuc Duy Do <dduyphuc@gmail.com>\n"
 "Language-Team: Vietnamese <vi@li.org>\n"
-"Language: vi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-01-22 16:08+0000\n"
-"X-Generator: Launchpad (build 18302)\n"
+"X-Launchpad-Export-Date: 2017-02-14 20:36+0000\n"
+"X-Generator: Launchpad (build 18326)\n"
 
 #: ../data/homebank.desktop.in.in.h:1 ../src/dsp_mainwindow.c:879
 msgid "HomeBank"
@@ -37,8 +36,8 @@ msgstr ""
 
 #: ../data/homebank.appdata.xml.in.h:1
 msgid ""
-"HomeBank is a free software (as in \"free speech\" and also as in \"free beer"
-"\") that will assist you to manage your personal accounting."
+"HomeBank is a free software (as in \"free speech\" and also as in \"free "
+"beer\") that will assist you to manage your personal accounting."
 msgstr ""
 
 #: ../data/homebank.appdata.xml.in.h:2
@@ -971,9 +970,8 @@ msgid "Collapse all"
 msgstr ""
 
 #: ../src/dsp_mainwindow.c:2869
-#, fuzzy
 msgid "Show all"
-msgstr "Trình bày chi tiết"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2874
 msgid "By type"
@@ -1147,7 +1145,7 @@ msgstr "- chia -"
 #. label = gtk_label_new(_("General"));
 #. page = ui_flt_manage_page_general(&data);
 #. gtk_notebook_append_page (GTK_NOTEBOOK (notebook), page, label);
-#.
+#. 
 #: ../src/list_operation.c:1044 ../src/list_operation.c:1362
 #: ../src/rep_balance.c:1240 ../src/rep_vehicle.c:218 ../src/rep_vehicle.c:1097
 #: ../src/ui-filter.c:1302 ../src/ui-pref.c:1540
@@ -1562,7 +1560,7 @@ msgstr "_Tích lũy"
 msgid "_View by:"
 msgstr "_Hiển thị theo:"
 
-#.
+#. 
 #. LST_CAR_DATE,
 #. LST_CAR_WORDING,
 #. LST_CAR_METER,
@@ -1571,10 +1569,10 @@ msgstr "_Hiển thị theo:"
 #. LST_CAR_AMOUNT,
 #. LST_CAR_DIST,
 #. LST_CAR_100KM
-#.
-#.
+#. 
+#. 
 #. column: Wording
-#.
+#. 
 #. column = gtk_tree_view_column_new();
 #. gtk_tree_view_column_set_title(column, _("Wording"));
 #. gtk_tree_view_append_column (GTK_TREE_VIEW(view), column);
@@ -1582,7 +1580,7 @@ msgstr "_Hiển thị theo:"
 #. gtk_tree_view_column_pack_start(column, renderer, TRUE);
 #. gtk_tree_view_column_add_attribute(column, renderer, "text", LST_CAR_WORDING);
 #. //gtk_tree_view_column_set_cell_data_func(column, renderer, repvehicle_text_cell_data_function, NULL, NULL);
-#.
+#. 
 #. column: Meter
 #: ../src/rep_vehicle.c:219 ../src/rep_vehicle.c:1130
 msgid "Meter"
@@ -2120,7 +2118,8 @@ msgstr "Tập tin không hợp lệ..."
 #: ../src/ui-assist-import.c:1237
 #, c-format
 msgid "account: %d - transaction: %d - payee: %d - categorie: %d"
-msgstr "tài khoản: %d - giao dịch: %d - người được trả tiền: %d - danh mục: %d"
+msgstr ""
+"tài khoản: %d - giao dịch: %d - người được trả tiền: %d - danh mục: %d"
 
 #: ../src/ui-assist-import.c:1358
 msgid "Some date convertion failed"
@@ -3325,9 +3324,3 @@ msgstr "Bao gồm"
 #: ../src/ui-widgets.c:935
 msgid "Exclude"
 msgstr "Loại trừ"
-
-#~ msgid "Edit the filter"
-#~ msgstr "Chỉnh sửa bộ lọc"
-
-#~ msgid "Edit Filter"
-#~ msgstr "Sửa bộ lọc"
