--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -6,12 +6,11 @@ msgstr ""
 "PO-Revision-Date: 2016-10-05 00:48+0000\n"
 "Last-Translator: 陈柳云 <chenliuyun82@gmail.com>\n"
 "Language-Team: \n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-01-22 16:08+0000\n"
-"X-Generator: Launchpad (build 18302)\n"
+"X-Launchpad-Export-Date: 2017-02-14 20:36+0000\n"
+"X-Generator: Launchpad (build 18326)\n"
 
 #: ../data/homebank.desktop.in.in.h:1 ../src/dsp_mainwindow.c:879
 msgid "HomeBank"
@@ -32,8 +31,8 @@ msgstr "财务，会计，预算，个人，现金"
 
 #: ../data/homebank.appdata.xml.in.h:1
 msgid ""
-"HomeBank is a free software (as in \"free speech\" and also as in \"free beer"
-"\") that will assist you to manage your personal accounting."
+"HomeBank is a free software (as in \"free speech\" and also as in \"free "
+"beer\") that will assist you to manage your personal accounting."
 msgstr "HomeBank是一个免费的并且能协助你管理个人账户的软件。"
 
 #: ../data/homebank.appdata.xml.in.h:2
@@ -46,9 +45,7 @@ msgstr "它易于使用并且能将你个人财务状况用强大的过滤工具
 msgid ""
 "If you are looking for a completely free and easy way to manage your "
 "personal accounting then HomeBank should be the software of choice."
-msgstr ""
-"如果你正在寻找一个完全免费并且能轻松上手的个人财务管理软件，HomeBank是一个很"
-"棒的选择。"
+msgstr "如果你正在寻找一个完全免费并且能轻松上手的个人财务管理软件，HomeBank是一个很棒的选择。"
 
 #. GTK_FILE_CHOOSER_ACTION_OPEN,
 #: ../src/dsp_account.c:403 ../src/ui-account.c:658
@@ -828,9 +825,9 @@ msgstr "最高消费"
 
 #. future usage
 #: ../src/dsp_mainwindow.c:1168
-#, fuzzy, c-format
+#, c-format
 msgid "Top %d spending"
-msgstr "最高消费"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:1335 ../src/rep_stats.c:1025 ../src/rep_stats.c:1045
 #: ../src/ui-budget.c:131 ../src/ui-category.c:393 ../src/ui-category.c:594
@@ -976,14 +973,12 @@ msgid "Collapse all"
 msgstr ""
 
 #: ../src/dsp_mainwindow.c:2869
-#, fuzzy
 msgid "Show all"
-msgstr "显示明细(_D)"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2874
-#, fuzzy
 msgid "By type"
-msgstr "(缺少类型)"
+msgstr ""
 
 #: ../src/dsp_mainwindow.c:2875
 msgid "By institition"
@@ -1153,7 +1148,7 @@ msgstr "-拆分-"
 #. label = gtk_label_new(_("General"));
 #. page = ui_flt_manage_page_general(&data);
 #. gtk_notebook_append_page (GTK_NOTEBOOK (notebook), page, label);
-#.
+#. 
 #: ../src/list_operation.c:1044 ../src/list_operation.c:1362
 #: ../src/rep_balance.c:1240 ../src/rep_vehicle.c:218 ../src/rep_vehicle.c:1097
 #: ../src/ui-filter.c:1302 ../src/ui-pref.c:1540
@@ -1568,7 +1563,7 @@ msgstr "累计(_C)"
 msgid "_View by:"
 msgstr "查看方式(_V)："
 
-#.
+#. 
 #. LST_CAR_DATE,
 #. LST_CAR_WORDING,
 #. LST_CAR_METER,
@@ -1577,10 +1572,10 @@ msgstr "查看方式(_V)："
 #. LST_CAR_AMOUNT,
 #. LST_CAR_DIST,
 #. LST_CAR_100KM
-#.
-#.
+#. 
+#. 
 #. column: Wording
-#.
+#. 
 #. column = gtk_tree_view_column_new();
 #. gtk_tree_view_column_set_title(column, _("Wording"));
 #. gtk_tree_view_append_column (GTK_TREE_VIEW(view), column);
@@ -1588,7 +1583,7 @@ msgstr "查看方式(_V)："
 #. gtk_tree_view_column_pack_start(column, renderer, TRUE);
 #. gtk_tree_view_column_add_attribute(column, renderer, "text", LST_CAR_WORDING);
 #. //gtk_tree_view_column_set_cell_data_func(column, renderer, repvehicle_text_cell_data_function, NULL, NULL);
-#.
+#. 
 #. column: Meter
 #: ../src/rep_vehicle.c:219 ../src/rep_vehicle.c:1130
 msgid "Meter"
@@ -3354,12 +3349,3 @@ msgstr "包含"
 #: ../src/ui-widgets.c:935
 msgid "Exclude"
 msgstr "排除"
-
-#~ msgid "Edit the filter"
-#~ msgstr "编辑过滤"
-
-#~ msgid "Edit Filter"
-#~ msgstr "编辑过滤器"
-
-#~ msgid "Configure _Preferences"
-#~ msgstr "配置首选项(_P)"
